homelab-gitops/apps/homepage/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homepage
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - homepage-dev.thundertest.org
      secretName: homepage-dev-tls
  rules:
    - host: homepage-dev.thundertest.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: homepage
                port:
                  number: 80
